# kaziapi

./: .env.example  .gitignore  README.md  build.sh  manage.py  pyproject.toml
authentication/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
chat/: admin.py  apps.py  models.py  serializers.py  signals.py  urls.py  views.py
chat/migrations/: 0001_initial.py
jobs/: admin.py  apps.py  models.py  serializers.py  signals.py  urls.py  views.py
jobs/migrations/: 0001_initial.py  0002_alter_jobpost_deadline_date.py  0003_alter_jobpost_deadline_date.py  0004_jobapplication_approval_date_and_more.py  0005_alter_jobapplication_approval_date_and_more.py  0006_alter_jobapplication_approval_date_and_more.py  0007_alter_jobapplication_approval_date_and_more.py  0008_jobpost_job_picture_and_more.py  0009_alter_jobapplication_approval_date_and_more.py  0010_alter_jobapplication_approval_date_and_more.py  0011_alter_jobapplication_approval_date_and_more.py  (+18 more)
kaziai/: ai.py  aireccomends.py  algone.py  apps.py  serializers.py  urls.py  views.py
kaziapi/: asgi.py  settings.py  urls.py  wsgi.py
kaziweb/: apps.py  urls.py  views.py
notifications/: admin.py  apps.py  models.py  serializers.py  signals.py  urls.py  views.py
recovery/: .views.py.kate-swp  admin.py  apps.py  models.py  serializers.py  signals.py  urls.py  views.py
sms/: admin.py  apps.py  models.py  offline.py  serializers.py  signals.py  talk.py  urls.py  ussd.py  views.py
users/: admin.py  managers.py  models.py  permissions.py  serializers.py  signals.py  urls.py  views.py
(+77 files in other folders)
